--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="javascripts/respond.js"></script>
+    <script src="javascripts/base64.js"></script>
+    <script src="javascripts/Markdown.Converter.js"></script>
+    <script src="javascripts/Markdown.Sanitizer.js"></script>
+    <!--<script src="https://api.github.com/repos/bradrhodes/PureSeeder3/readme?callback=rmRender"></script>-->
+    <script type="text/javascript">
+      $.ajax({
+          url: 'https://api.github.com/repos/bradrhodes/PureSeeder3/readme?callback=rmRender',
+          headers: {
+            Accept: "application/vnd.github.v3.raw"
+          },
+          //dataType: 'application/vnd.github.v3.raw',          
+          dataType: 'jsonp',
+          success: function(response)
+          {
+            /*var words = CryptoJS.end.Utf8.parse(response.data.content);
+            console.log(words);            
+            var decodedData = CryptoJS.enc.Utf8.stringify(words);
+            console.log(decodedData);*/
+            var encodedText = response.data.content;
+            console.log(encodedText);
+            var decodedText = decode64(encodedText);
+            console.log(decodedText);
+
+            var convert = new Markdown.getSanitizingConverter().makeHtml;
+            var convertedText = convert(decodedText);
+            /*var data = response.data.content;
+            console.log(data);*/
+
+            $("#readmeContent").html(convertedText);
+          }
+      });
+
+
+    </script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -36,13 +70,16 @@
           <span class="credits left">Project maintained by <a href="https://github.com/bradrhodes">bradrhodes</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
+        <div id='readmeContent'>
 
-        <h3>
+        </div>
+
+<!--         <h3>
 <a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to PURE Seeder 3</h3>
 
 <p>Windows Battlefield seeding tool. This is a .NET application with an embedded browser so it is not dependent upon IE installations.</p>
 <p>This application requires Origin and Battlefield to be installed in order to work.</p>
-
+ -->
 <!--
 <h3>
 <a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
