--- a/index.html
+++ b/index.html
@@ -14,27 +14,18 @@
     <!--<script src="https://api.github.com/repos/bradrhodes/PureSeeder3/readme?callback=rmRender"></script>-->
     <script type="text/javascript">
       $.ajax({
-          url: 'https://api.github.com/repos/bradrhodes/PureSeeder3/readme?callback=rmRender',
+          url: 'https://api.github.com/repos/pure-battlefield/PureSeeder3/readme?callback=rmRender',
           headers: {
             Accept: "application/vnd.github.v3.raw"
           },
-          //dataType: 'application/vnd.github.v3.raw',          
           dataType: 'jsonp',
           success: function(response)
           {
-            /*var words = CryptoJS.end.Utf8.parse(response.data.content);
-            console.log(words);            
-            var decodedData = CryptoJS.enc.Utf8.stringify(words);
-            console.log(decodedData);*/
             var encodedText = response.data.content;
-            //console.log(encodedText);
             var decodedText = decode64(encodedText);
-            //console.log(decodedText);
 
             var convert = new Markdown.getSanitizingConverter().makeHtml;
             var convertedText = convert(decodedText);
-            /*var data = response.data.content;
-            console.log(data);*/
 
             $("#readmeContent").html(convertedText);
           }
@@ -54,8 +45,8 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://github.com/bradrhodes/PureSeeder3">View On GitHub</a></li>
-          <li class="downloads"><a href="http://bradrhodes.github.io/PureSeeder3/publish.htm">Newest</a></li>
+          <li class="fork"><a href="https://github.com/pure-battlefield/PureSeeder3">View On GitHub</a></li>
+          <li class="downloads"><a href="http://pure-battlefield.github.io/PureSeeder3/publish.htm">Newest</a></li>
           <li class="title">DOWNLOADS</li>
         </nav>
       </div><!-- end header -->
@@ -71,21 +62,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
         <div id='readmeContent'>
-
         </div>
-
-<!--         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to PURE Seeder 3</h3>
-
-<p>Windows Battlefield seeding tool. This is a .NET application with an embedded browser so it is not dependent upon IE installations.</p>
-<p>This application requires Origin and Battlefield to be installed in order to work.</p>
- -->
-<!--
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
--->
       </section>
 
     </div>
